<resources>
    <string name="app_name">Control Inventario</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="nombre_proveedor">Nombre</string>
    <string name="nit_proveedor">NIT</string>
    <string name="direccion_proveedor">Dirección</string>
    <string name="telefono_proveedor">Numero teléfono</string>
    <string name="codigo">Codigo</string>
    <string name="enviar">Aceptar</string>
    <string name="nombre">Nombre</string>
    <string name="costoCompra">Costo compra</string>
    <string name="valorSugerido">Valor sugerido</string>
    <string name="descuento">Descuento</string>
    <string name="iva">Iva</string>
    <string name="fechaVencimiento">Fecha vencimiento</string>
    <string name="provedor">Proveedor</string>
    <string name="eliminar">Eliminar</string>
    <string name="editar">Editar</string>
    <string name="title_activity_scaner_inventario">ScanerInventario</string>
    <string name="textoBotonVender">Vender productos</string>
    <string name="textoBotonAgregarProducto">Agregar productos</string>
    <string name="guardar">guardar</string>

</resources>
